--- a/dynamic.html
+++ b/dynamic.html
@@ -8,7 +8,13 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="row">    
+    <div class="row">
+      <section>
+        <nav class = "navbar navbar-default">
+          <p>This is a navbar</p>
+        </nav>
+      </section>
+
     </div>
   </div>       
   
