added css and footer

--- a/dynamic.html
+++ b/dynamic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="css/dynamiclab.css">
+<link rel="stylesheet" type="text/css" href="css/dynamic.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 <html>
@@ -8,8 +8,26 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="row">    
-    </div>
+    
+
+
+
+
+
+
+
+
+  <!--footer-->
+    <footer class="container-fluid">
+      <div class="row well">
+        <div class="col-md-3">x</div>
+        <div class="col-md-3">x</div>
+        <div class="col-md-3">x</div>
+        <div class="col-md-3">x</div>
+       
+      </div>
+    </footer>
+
   </div>       
   
 
