added comment for navbar

--- a/dynamic.html
+++ b/dynamic.html
@@ -18,26 +18,26 @@
 
 
 
-  <!--footer-->
-    <footer class="container-fluid">
-      <div class="row well">
-        <div class="col-md-3">x</div>
-        <div class="col-md-3">x</div>
-        <div class="col-md-3">x</div>
-        <div class="col-md-3">x</div>
-       
-      </div>
-    </footer>
+  
 
-
+    <!--Navbar-->
     <div class="row">
       <section>
         <nav class = "navbar navbar-default">
           <p>This is a navbar</p>
         </nav>
       </section>
-
     </div>
+
+    <!--footer-->
+    <footer class="container-fluid">
+      <div class="row well">
+        <div class="col-md-3">x</div>
+        <div class="col-md-3">x</div>
+        <div class="col-md-3">x</div>
+        <div class="col-md-3">x</div>      
+      </div>
+    </footer>
 
   </div>       
   
