--- a/dynamic.html
+++ b/dynamic.html
@@ -32,7 +32,9 @@
     <!--footer-->
     <footer class="container-fluid">
       <div class="row well">
-        <div class="col-md-3">x</div>
+        <div class="col-md-3">
+          <button class="btn btn-primary" id="list">Add a list</button>
+        </div>
         <div class="col-md-3">x</div>
         <div class="col-md-3">x</div>
         <div class="col-md-3">x</div>      
