btn for btn element

--- a/dynamic.html
+++ b/dynamic.html
@@ -33,7 +33,7 @@
     <footer class="container-fluid">
       <div class="row well">
         <div class="col-md-3">x</div>
-        <div class="col-md-3">x</div>
+        <div class="col-md-3"><button type="button" class="btn btn-default">Button for buttons</button></div>
         <div class="col-md-3">x</div>
         <div class="col-md-3">x</div>      
       </div>
