--- a/dynamic.html
+++ b/dynamic.html
@@ -35,7 +35,7 @@
         <div class="col-md-3">
           <button class="btn btn-primary" id="list">Add a list</button>
         </div>
-        <div class="col-md-3">x</div>
+        <div class="col-md-3"><button class="btn btn-primary" id="list">Add a Form</button></div>
         <div class="col-md-3">x</div>
         <div class="col-md-3">x</div>      
       </div>
