--- a/dynamic.html
+++ b/dynamic.html
@@ -36,7 +36,7 @@
           <button class="btn btn-primary" id="list">Add a list</button>
         </div>
         <div class="col-md-3"><button class="btn btn-primary" id="list">Add a Form</button></div>
-        <div class="col-md-3">x</div>
+        <div class="col-md-3"><button class="btn btn-primary" id="btnElement">Add more buttons</button></div>
         <div class="col-md-3">x</div>      
       </div>
     </footer>
