fixed button ID and added two buttons

--- a/dynamic.html
+++ b/dynamic.html
@@ -36,10 +36,10 @@
           <button class="btn btn-primary" id="list">Add a list</button>
         </div>
         <div class="col-md-3">
-          <button class="btn btn-primary" id="list">Add a Form</button>
+          <button class="btn btn-primary" id="form">Add a Form</button>
         </div>
-        <div class="col-md-3">x</div>
-        <div class="col-md-3">x</div>      
+        <div class="col-md-3"><button class="btn btn-primary" id="image">Add an Image</button></div>
+        <div class="col-md-3"><button class="btn btn-primary" id="button">Add a Button</button></div>      
       </div>
     </footer>
 
