added script tags for reference to JS folder and JQuery

--- a/dynamic.html
+++ b/dynamic.html
@@ -9,17 +9,6 @@
 <body>
   <div class="container-fluid">
 
-    
-
-
-
-
-
-
-
-
-  
-
     <!--Navbar-->
     <div class="row">
       <section>
@@ -28,6 +17,8 @@
         </nav>
       </section>
     </div>
+
+
 
     <!--footer-->
     <footer class="container-fluid">
@@ -44,7 +35,8 @@
     </footer>
 
   </div>       
-  
 
+<script type="text/javascript" src="js/dynamic.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
 </body>
 </html>
