--- a/dynamic.html
+++ b/dynamic.html
@@ -8,6 +8,14 @@
 </head>
 <body>
   <div class="container-fluid">
+    <div class="col-md-4"><p>text</p>
+      <div class="col-md-4"><p>text</p>
+        <div class="col-md-4"><p>text</p>
+          <div class="col-md-4"><p>text</p>            
+          </div>
+        </div>
+      </div>
+    </div>
 
     
 
