--- a/dynamic.html
+++ b/dynamic.html
@@ -8,15 +8,11 @@
 </head>
 <body>
   <div class="container-fluid">
-    <div class="col-md-4"><p>text</p>
-      <div class="col-md-4"><p>text</p>
-        <div class="col-md-4"><p>text</p>
-          <div class="col-md-4"><p>text</p>            
-          </div>
-        </div>
-      </div>
-    </div>
-
+    <div class="col-md-4"><p>text</p></div>
+    <div class="col-md-4"><p>text</p></div>
+    <div class="col-md-4"><p>text</p></div>
+    <div class="col-md-4"><p>text</p></div>           
+  
     
 
 
